fixes spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,17 @@
+html {
+  line-height: 1.5;
+}
+
 body {
   background-color: #c9b5ab;
 }
+
 h1, nav ol {
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
+
 main, aside, body {
-  font-family: 'PT Serif', serif;
+  font-family: "PT Serif", serif;
 }
 
 nav ol li a {
@@ -13,24 +19,25 @@ nav ol li a {
 }
 
 nav ol li {
- list-style-type: none;
- font-size: 1.5rem;
- }
+  list-style-type: none;
+  font-size: 1.5rem;
+}
 
 a {
-     text-decoration: none;
- }
+  text-decoration: none;
+}
 
- a:hover {
-   color: #3f1622;
- }
+a:hover {
+  color: #3f1622;
+  text-decoration: underline;
+}
 
 h1, h2 {
   color: #3f1622;
 }
 
 footer {
-  font-size: 0.8rem;
+  font-size: .8rem;
 }
 
 blockquote {
@@ -44,13 +51,17 @@ blockquote {
 }
 
 aside {
-  font-size: 0.8rem;
-}
-
-dl {
-  line-height: 1.5;
+  font-size: .8rem;
 }
 
 cite {
-  font-size: 0.8rem;
+  font-size: .8rem;
+}
+
+figcaption {
+  font-style: italic;
+}
+
+strong {
+  font-weight: normal;
 }
